# auto-lang

./: .clangd  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.cn.md  README.en.md  README.md  TEST_STATISTICS.md  check_error.txt  demo.at  deploy-website.ps1  dautostackauto-langcratesauto-lang-macrossrclib.rs  dautostackauto-langtest_did_you_mean.at  dautostackauto-langtmpdump_bytecode.rs  dautostackauto-langtmptest_field_access.at  dautostackauto-langtmptest_heap_parse.at  dautostackauto-langtmptest_incremental.rs  dautostackauto-langtmptest_minimal.at  dautostackauto-langtmptest_parse.at  dautostackauto-langtmptest_simple.at  dautostackauto-langtmptest_simple_assign.at  fix_line_endings.py  fix_line_endings_v2.py  flow.at  hello.as  hello.at  history.txt  infer_tests_error.txt  kill-vue-dev.bat  linked_list_future.at  ly  output_capture.txt  package-lock.json  package.json  plan-082-complete.md  plan-082-phase7-summary.md  pnpm-lock.yaml  probe_min.at  reproduce_dot.at  (+166 more)
autoc/: CMakeLists.txt  README.md  ast.c  ast.h  astr.c  astr.h  autoc.h  common.h  eval.c  eval.h  lexer.c  lexer.h  main.c  parser.c  parser.h  test.c  test.h  test_ast_repr.c  test_fstr_simple.c  test_lexer.c  test_markdown.c  test_parser.c  test_simple.c  token.h  trans_c.c  trans_c.h  universe.c  universe.h  value.c  value.h
autoc/tests/: lexer_tests.md  parser_tests.md
crates/aictl/: Cargo.toml
crates/aictl/src/: main.rs
crates/auto/: Cargo.toml  build.rs
crates/auto-ai-client/: Cargo.toml
crates/auto-ai-client/src/: config.rs  daemon.at  error.at  lib.at  lib.rs  provider.rs  sse.rs  types.rs
crates/auto-ai-daemon/: Cargo.toml
crates/auto-ai-daemon/src/: config.rs  lib.rs  main.rs  pool.rs  server.rs  tracker.rs
crates/auto-atom/: Cargo.toml
crates/auto-atom/src/: atom.rs  error.rs  lib.rs  parser.rs
crates/auto-cache/: Cargo.toml
crates/auto-cache/src/: aie_bridge.rs  automan.rs  fingerprint.rs  gc.rs  lib.rs  registry.rs  sandbox.rs  scanner.rs  sig_code.rs  storage.rs  trans.rs
crates/auto-cache/tests/: phase7_integration.rs
crates/auto-forge/: Cargo.toml
crates/auto-forge/src/: ai.rs  lib.rs  main.rs
crates/auto-forge/tests/: relay_integration.rs
crates/auto-gen/: Cargo.toml
crates/auto-gen/docs/: diag.as  tutorial.md
crates/auto-gen/src/: data.rs  error.rs  generator.rs  guard.rs  lib.rs  template.rs  test_framework.rs
crates/auto-gen/test_data/: service_template.txt.at  services.at  services_test.at
crates/auto-gen/test_output/: service_template.txt
crates/auto-gen/tests/: autogen_tests.md
crates/auto-lang/: Cargo.toml  README_A2R.md  build.rs  test_cap_5.at  test_cap_final.at  test_capacity.at  test_capacity_growth.at  test_concat.at  test_field_access.at  test_file.at  test_flow.at  test_hold.at  test_list.at  test_list_full.at  test_list_len.at  test_list_new.at  test_list_simple.at  test_list_works.at  test_multiline.rs  test_new_list.at  test_no_main.at  test_say.at  test_say_int.at  test_simple.at  test_syntax.at  test_type.rs  test_type_init.at  test_vec.at  tmp_test_is_empty.at
crates/auto-lang/auto/: greet_mod.at
crates/auto-lang/benches/: incremental_transpile_bench.rs
crates/auto-lang/examples/: a2r_bootstrap.rs  a2r_step00.rs  a2r_step02.rs  a2r_step03.rs  a2r_step04.rs  a2r_test.rs  bootstrap_phase3.rs  feature_parity.rs  perf_benchmark.rs  run_vm_test.rs  test_widget_macro.rs  ui_accordion.rs  ui_container.rs  ui_counter.rs  ui_gallery.rs  ui_hello_loader.rs  ui_input.rs  ui_layout.rs  ui_list.rs  ui_navigation_rail.rs  ui_progress.rs  ui_radio.rs  ui_scroll.rs  ui_select.rs  ui_sidebar.rs  ui_slider.rs  ui_table.rs  ui_tabs.rs  ui_todo.rs  ui_todos.rs
crates/auto-lang/src/: a2c_tests.rs  a2r_std.rs  ast.rs  atom.rs  atom_error.rs  atom_tests.rs  autovm_client.rs  autovm_daemon.rs  autovm_persistent.rs  autovm_repl.rs  bigvm_generic_integration_tests.rs  bigvm_repl.rs  compile.rs  config.rs  config_tests.rs  database.rs  dep.rs  dep_scanner.rs  dialect.rs  dstr_tests.rs  error.rs  error_tests.rs  eval.rs  execution_engine.rs  ffi.rs  generic_list_data_tests.rs  generic_tests.rs  hash.rs  host.rs  implicit_union.rs  indexer.rs  interp.rs  lexer.rs  lib.rs  listdata_heap_object_tests.rs  macros.rs  maker.rs  mode.rs  module_cache.rs  monomorphize_tests.rs  (+57 more)
crates/auto-lang/test/: copy_wrong.py
crates/auto-lang/tests/: autodown_tests.rs  bench_bigvm_vs_eval.rs  bench_incremental.rs  desktop_behavior.rs  feature_parity.rs  feature_parity_simple.rs  infer_tests.rs  plan131_integration_test.rs  string_test.at  unified_backend_test.rs
crates/auto-lsp/: Cargo.toml
crates/auto-lsp/src/: backend.rs  bin.rs  completion.rs  diagnostics.rs  goto_def.rs  hover_info.rs  inlay_hints.rs  lib.rs  signature_help.rs  workspace.rs
crates/auto-lsp/tests/: integration_test.rs
crates/auto-macros/: Cargo.toml
crates/auto-macros/src/: lib.rs  rust_fn_draft.rs
crates/auto-macros/tests/: debug_expand.rs  debug_test.rs  proc_macro_tests.rs  value_macro_tests.rs
crates/auto-man/: Cargo.toml
crates/auto-man/src/: api_gen.rs  ark.rs  asset.rs  automan.rs  builder.rs  cache.rs  dir.rs  error.rs  exporter.rs  file_types.rs  git.rs  group.rs  index.rs  jet.rs  lib.rs  lock.rs  main.rs  node_ext.rs  pac.rs  pkg.rs  port.rs  pull.rs  resolver.rs  rust_ui.rs  scanner.rs  target.rs  tauri.rs  tauri_backend.rs  up.rs  util.rs  version.rs  vscode.rs  vue.rs
crates/auto-playground/: Cargo.toml
crates/auto-playground/frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
crates/auto-playground/src/: code_runner.rs  error.rs  main.rs  project.rs  vm_runner.rs
crates/auto-vm/: Cargo.toml
crates/auto-vm/src/: dump_code.rs  main.rs
crates/auto/src/: cmd_a2c_stdlib.rs  cmd_block.rs  cmd_tauri.rs  cmd_ui.rs  cmd_vue.rs  main.rs
crates/auto/tests/: cmd_ui.rs
examples/api-example/rust-bk/: Cargo.toml
examples/rust-workspace/: Cargo.toml
examples/rust-workspace/011-calculator/: Cargo.toml
examples/rust-workspace/012-stopwatch/: Cargo.toml
examples/rust-workspace/013-todo/: Cargo.toml
(+6766 files in other folders)
