[workspace]
members = [
    "crates/auto",
    "crates/auto-gen",
    "crates/auto-lang",
    "crates/auto-lang-macros",
    # "crates/auto-lsp",  # Temporarily disabled due to Cargo.toml issues
    "crates/auto-val",
    "crates/auto-vm",
    # "crates/auto-xml",  # Temporarily disabled due to Cargo.toml issues
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dirs = "6.0.0"
rustyline = { version = "14.0.0", features = ["with-file-history"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "2.0.12"
regex = "1.11.1"
strum = "0.26"
strum_macros = "0.26"
ecow = "0.2.3"
normalize-path = "0.2.1"
roxmltree = "0.18.0"
dashmap = "6.1"
tokio = { version = "1.42", features = ["full"] }
blake3 = "1.5"
bincode = "1.3"
glob-match = "0.2.1"
