[workspace]
members = [
    "crates/auto",
    "crates/auto-gen",
    "crates/auto-lang",
    "crates/auto-macros",
    # Plan 078: AutoMan migration from ../auto-man
    "crates/auto-man",
    # "crates/auto-lsp",  # Temporarily disabled due to Cargo.toml issues
    "crates/auto-val",
    "crates/auto-vm",
    "crates/auto-shell",
    # "crates/auto-xml",  # Temporarily disabled due to Cargo.toml issues
    # Plan 082: AutoCache global build cache
    "crates/auto-cache",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dirs = "6.0.0"
rustyline = { version = "14.0.0", features = ["with-file-history"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "2.0.12"
regex = "1.11.1"
strum = "0.26"
strum_macros = "0.26"
ecow = "0.2.3"
normalize-path = "0.2.1"
roxmltree = "0.18.0"
dashmap = "6.1"
tokio = { version = "1.42", features = ["full"] }
blake3 = "1.5"
bincode = "1.3"
glob-match = "0.2.1"
chrono = "0.4"

# AutoMan dependencies (Phase 1)
tabled = "0.18"
simplelog = "0.12"
log = "0.4"
dialoguer = "0.11"
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
version-compare = "0.0"
colored = "3"
zip = "3.0"
encoding_rs = "0.8"
is_executable = "1.0"
toml = "0.8"
indicatif = "0.17"
rust-embed = { version = "8.5", features = ["compression"] }
tempfile = "3.14"
