[package]
name = "aictl"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing the aaid AI daemon"

[[bin]]
name = "aictl"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
