[package]
name = "auto-ai-daemon"
version = "0.1.0"
edition = "2021"
description = "AutoOS AI daemon — shared LLM concurrency arbitration"

[[bin]]
name = "aaid"
path = "src/main.rs"

[dependencies]
auto-ai-client = { path = "../auto-ai-client" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

[lib]
name = "auto_ai_daemon"
path = "src/lib.rs"
