[package]
name = "auto-cache"
version = "0.1.0"
edition = "2021"
description = "Global build cache for AutoLang projects with cross-project artifact sharing"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
