[package]
name = "auto-forge"
version = "0.1.0"
edition = "2021"
description = "AutoForge backend — spec-driven AI coding assistant"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
futures = "0.3"
dirs = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
