[package]
name = "auto-gen"
version = "0.1.0"
edition = "2021"
description = "AutoGen is a automatic code generater, supporting generation of JSON/C/Rust/"
homepage = "https://gitee.com/auto-stack/auto-gen"
repository = "https://gitee.com/auto-stack/auto-gen"
readme = "README.md"
license = "Proprietary"
keywords = ["automation", "language", "code generation"]

[[bin]]
name = "autogen"
path = "src/bin/autogen.rs"

[dependencies]
clap = { workspace = true }
auto-lang = { path = "../auto-lang" }
auto-val = { path = "../auto-val" }
regex = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
notify = { version = "7.0", optional = true }

[features]
default = []
watch = ["notify"]
