[package]
name = "auto-lang"
version = "0.1.0"
edition = "2021"
description = "Auto is a programming language for automations in various scenarios"
homepage = "https://gitee.com/auto-stack/auto-lang"
repository = "https://gitee.com/auto-stack/auto-lang"
readme = "README.md"
license = "MIT"
keywords = ["automation", "language", "scripting"]

[features]
default = ["with-file-history"]
with-file-history = []
# Plan 081: AutoVM is now the default execution engine (no feature flag required)
# DEPRECATED: The use-bigvm feature is kept for compatibility but has no effect
# AutoVM is always enabled. Use environment variable AUTO_EXECUTION_ENGINE=evaluator
# to switch to the TreeWalker evaluator for debugging/comparison.
use-bigvm = []
# Fallback to TreeWalker evaluator (for debugging/comparison)
use-evaluator = []
# Plan 152: SSE parsing + advanced streaming support
streaming-http = ["tokio-util", "futures"]

# Plan 015: UI Features (AutoUI Core)
ui = []
ui-interpreter = ["ui"]
ui-gpui = ["ui", "dep:gpui-lib"]
ui-iced = ["ui", "dep:iced"]

[dependencies]
auto-val = { path = "../auto-val" }
auto-cache = { path = "../auto-cache" }
rustyline = { workspace = true, features = ["with-file-history"] }
strum = { workspace = true }
strum_macros = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ecow = { workspace = true }
normalize-path = { workspace = true }
roxmltree = { workspace = true }
dirs = { workspace = true }
lazy_static = "1.4"
thiserror = { workspace = true }
miette = { workspace = true }
regex = "1"
auto-macros = { path = "../auto-macros" }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
blake3 = { workspace = true }
bincode = { workspace = true }
# Plan 081 Phase 5: Dynamic library loading for C/Rust FFI
libloading = "0.8"
# Logging for FFI bridge
log = { workspace = true }
# URL encoding (Plan 102)
urlencoding = { workspace = true }

# Plan 154: 真正的 HTTP 流式实现（reqwest::blocking）
reqwest = { version = "0.12", features = ["blocking"] }
# Plan 159: Directory walking for AutoCode agent
walkdir = "2"
# Plan 152: SSE 解析（保留可选依赖用于高级流式场景）
tokio-util = { version = "0.7", features = ["io"], optional = true }
futures = { version = "0.3", optional = true }

# Plan 015: UI Backend dependencies (optional)
gpui-lib = { version = "0.2.2", package = "gpui", optional = true }
iced = { version = "0.14.0", features = ["tokio", "debug", "image", "svg", "advanced"], optional = true }
notify = { workspace = true }
trans = "0.4.0"
# Plan 173: r2a transpiler (Rust → Auto)
syn = { version = "2", features = ["full", "parsing", "printing"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "incremental_transpile_bench"
harness = false

# ============================================================================
# a2r Test Examples
# Auto-generated from categorized test structure (Plan 170)
# Run: cargo run -p auto-lang --example hello
# Only includes examples that compile as standalone Rust
# ============================================================================

[[example]]
name = "hello"
path = "test/a2r/01_basics/001_hello/hello.expected.rs"

[[example]]
name = "sqrt"
path = "test/a2r/01_basics/002_sqrt/sqrt.expected.rs"

[[example]]
name = "func"
path = "test/a2r/01_basics/003_func/func.expected.rs"

[[example]]
name = "doc_comments"
path = "test/a2r/01_basics/004_doc_comments/doc_comments.expected.rs"

[[example]]
name = "struct"
path = "test/a2r/02_types/001_struct/struct.expected.rs"

[[example]]
name = "enum"
path = "test/a2r/02_types/002_enum/enum.expected.rs"

[[example]]
name = "if_basic"
path = "test/a2r/03_control_flow/001_if_basic/if_basic.expected.rs"

[[example]]
name = "if_nested"
path = "test/a2r/03_control_flow/002_if_nested/if_nested.expected.rs"

[[example]]
name = "if_multistmt"
path = "test/a2r/03_control_flow/003_if_multistmt/if_multistmt.expected.rs"

[[example]]
name = "if_return"
path = "test/a2r/03_control_flow/004_if_return/if_return.expected.rs"

[[example]]
name = "for_range"
path = "test/a2r/03_control_flow/005_for_range/for_range.expected.rs"

[[example]]
name = "for_conditions"
path = "test/a2r/03_control_flow/006_for_conditions/for_conditions.expected.rs"

[[example]]
name = "while_loop"
path = "test/a2r/03_control_flow/007_while_loop/while_loop.expected.rs"

[[example]]
name = "is_match"
path = "test/a2r/03_control_flow/008_is_match/is_match.expected.rs"

[[example]]
name = "is_multi_stmt"
path = "test/a2r/03_control_flow/009_is_multi_stmt/is_multi_stmt.expected.rs"

[[example]]
name = "fstring"
path = "test/a2r/04_strings/001_fstring/fstring.expected.rs"

[[example]]
name = "fstring_edge"
path = "test/a2r/04_strings/002_fstring_edge/fstring_edge.expected.rs"

[[example]]
name = "multi_str"
path = "test/a2r/04_strings/003_multi_str/multi_str.expected.rs"

[[example]]
name = "arithmetic"
path = "test/a2r/05_expressions/001_arithmetic/arithmetic.expected.rs"

[[example]]
name = "unary"
path = "test/a2r/05_expressions/002_unary/unary.expected.rs"

[[example]]
name = "indexing"
path = "test/a2r/05_expressions/003_indexing/indexing.expected.rs"

[[example]]
name = "blocks"
path = "test/a2r/05_expressions/004_blocks/blocks.expected.rs"

[[example]]
name = "ref_expr"
path = "test/a2r/05_expressions/005_ref_expr/ref_expr.expected.rs"

[[example]]
name = "range_expr"
path = "test/a2r/05_expressions/006_range_expr/range_expr.expected.rs"

[[example]]
name = "composition"
path = "test/a2r/05_expressions/007_composition/composition.expected.rs"

[[example]]
name = "enum_pattern"
path = "test/a2r/06_pattern_matching/001_enum_pattern/enum_pattern.expected.rs"

[[example]]
name = "empty_variant_match"
path = "test/a2r/06_pattern_matching/003_empty_variant_match/empty_variant_match.expected.rs"

[[example]]
name = "hetero_enum"
path = "test/a2r/06_pattern_matching/004_hetero_enum/hetero_enum.expected.rs"

[[example]]
name = "generic_hetero_enum"
path = "test/a2r/06_pattern_matching/005_generic_hetero_enum/generic_hetero_enum.expected.rs"

[[example]]
name = "borrow_view"
path = "test/a2r/07_ownership/001_borrow_view/borrow_view.expected.rs"

[[example]]
name = "borrow_mut"
path = "test/a2r/07_ownership/002_borrow_mut/borrow_mut.expected.rs"

[[example]]
name = "borrow_move"
path = "test/a2r/07_ownership/003_borrow_move/borrow_move.expected.rs"

[[example]]
name = "borrow_conflicts"
path = "test/a2r/07_ownership/004_borrow_conflicts/borrow_conflicts.expected.rs"

[[example]]
name = "generic_field"
path = "test/a2r/08_generics/003_generic_field/generic_field.expected.rs"

[[example]]
name = "generic_ptr_field"
path = "test/a2r/08_generics/004_generic_ptr_field/generic_ptr_field.expected.rs"

[[example]]
name = "with_constraint"
path = "test/a2r/08_generics/005_with_constraint/with_constraint.expected.rs"

[[example]]
name = "option"
path = "test/a2r/09_option_result/001_option/option.expected.rs"

[[example]]
name = "list_methods"
path = "test/a2r/09_option_result/027_list_methods/list_methods.expected.rs"

[[example]]
name = "list_may"
path = "test/a2r/09_option_result/028_list_may/list_may.expected.rs"

[[example]]
name = "array"
path = "test/a2r/10_collections/001_array/array.expected.rs"

[[example]]
name = "method_chain"
path = "test/a2r/10_collections/005_method_chain/method_chain.expected.rs"

[[example]]
name = "method"
path = "test/a2r/11_methods/001_method/method.expected.rs"

[[example]]
name = "struct_methods"
path = "test/a2r/11_methods/002_struct_methods/struct_methods.expected.rs"

[[example]]
name = "closure"
path = "test/a2r/11_methods/003_closure/closure.expected.rs"

[[example]]
name = "static_fn"
path = "test/a2r/11_methods/004_static_fn/static_fn.expected.rs"

[[example]]
name = "func_literal_return"
path = "test/a2r/11_methods/005_func_literal_return/func_literal_return.expected.rs"

[[example]]
name = "basic_spec"
path = "test/a2r/12_specs/001_basic_spec/basic_spec.expected.rs"

[[example]]
name = "spec"
path = "test/a2r/12_specs/002_spec/spec.expected.rs"

[[example]]
name = "spec_delegation"
path = "test/a2r/12_specs/003_spec_delegation/spec_delegation.expected.rs"

[[example]]
name = "rust_use"
path = "test/a2r/14_modules/001_rust_use/rust_use.expected.rs"

[[example]]
name = "pub_visibility"
path = "test/a2r/14_modules/003_pub_visibility/pub_visibility.expected.rs"

[[example]]
name = "derive_attr"
path = "test/a2r/14_modules/008_derive_attr/derive_attr.expected.rs"

[[example]]
name = "type_cast"
path = "test/a2r/15_type_conversion/001_type_cast/type_cast.expected.rs"

[[example]]
name = "to_convert"
path = "test/a2r/15_type_conversion/002_to_convert/to_convert.expected.rs"

[[example]]
name = "async_fn"
path = "test/a2r/16_interop/001_async_fn/async_fn.expected.rs"

# Total: 55 examples (73 disabled - not standalone-compilable)
