[package]
name = "auto-lang"
version = "0.1.0"
edition = "2021"
description = "Auto is a programming language for automations in various scenarios"
homepage = "https://gitee.com/auto-stack/auto-lang"
repository = "https://gitee.com/auto-stack/auto-lang"
readme = "README.md"
license = "MIT"
keywords = ["automation", "language", "scripting"]

[features]
# Plan 330: ui-iced and python are heavy optional backends — no longer default.
# Consumers opt in explicitly (auto via its own default; auto-man via features).
default = ["with-file-history"]
# Plan 289: Feature-gated test groups for faster daily development
test-vm-files = []
test-trans = []
test-book = []
# Plan 289: Examples are opt-in to avoid 23 linker processes consuming ~46GB memory
build-examples = []
with-file-history = []
# Plan 081: AutoVM is now the default execution engine (no feature flag required)
# DEPRECATED: The use-bigvm feature is kept for compatibility but has no effect
# AutoVM is always enabled. Use environment variable AUTO_EXECUTION_ENGINE=evaluator
# to switch to the TreeWalker evaluator for debugging/comparison.
use-bigvm = []
# Fallback to TreeWalker evaluator (for debugging/comparison)
use-evaluator = []
# Plan 152: SSE parsing + advanced streaming support (futures now unconditional per Plan 341)
streaming-http = ["tokio-util"]

# Plan 214: Python FFI (embed CPython via PyO3)
python = ["pyo3"]

# Plan 015: UI Features (AutoUI Core)
ui = []
ui-interpreter = ["ui", "dep:ureq", "dep:axum"]
ui-gpui = ["ui", "dep:gpui-lib", "dep:gpui-component", "dep:anyhow"]
ui-iced = ["ui", "dep:iced", "ui-interpreter", "dep:image"]

[dependencies]
auto-val = { path = "../auto-val" }
auto-atom = { path = "../auto-atom" }
auto-cache = { path = "../auto-cache" }
# Plan 216: C FFI Bindgen manifest types
auto-bindgen = { path = "../auto-bindgen" }
rustyline = { workspace = true, features = ["with-file-history"] }
strum = { workspace = true }
strum_macros = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }      # Plan 342: block spec.md frontmatter
ecow = { workspace = true }
normalize-path = { workspace = true }
roxmltree = { workspace = true }
dirs = { workspace = true }
lazy_static = "1.4"
inventory = "0.3"
thiserror = { workspace = true }
miette = { workspace = true }
regex = "1"
auto-macros = { path = "../auto-macros" }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
blake3 = { workspace = true }
bincode = { workspace = true }
# Plan 081 Phase 5: Dynamic library loading for C/Rust FFI
libloading = "0.8"
# Logging for FFI bridge
log = { workspace = true }
# URL encoding (Plan 102)
urlencoding = { workspace = true }
# Plan 199 Phase 7: Colored output for debugger
colored = { workspace = true }

# Plan 154/341: HTTP client — blocking (Plan 154) + async + stream (Plan 341 异步客户端/SSE)
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
# Plan 159: Directory walking for AutoCode agent
walkdir = "2"
# Plan 212 Phase 2.2: Opaque struct shims
url = "2"
semver = "1"
# Plan 212 Phase 2.3: Additional opaque struct shims
chrono = "0.4"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
mime_guess = "2"
csv = "1.3"
# Plan 267 Phase B: TarGzip multi-crate composition
tar = "0.4"
flate2 = "1"
# Plan 267 Phase C: same_file handle comparison
same-file = "1"
ansi_term = "0.12"
# Plan 152/341: SSE 解析 + 异步流式（Plan 341 异步客户端需要 StreamExt）
tokio-util = { version = "0.7", features = ["io"], optional = true }
futures = "0.3"

# Plan 015: UI Backend dependencies (optional)
gpui-lib = { version = "0.2.2", package = "gpui", optional = true }
gpui-component = { version = "0.5.0", optional = true }
anyhow = { version = "1.0", optional = true }
iced = { version = "0.14.0", features = ["tokio", "image", "svg", "advanced"], optional = true }
image = { version = "0.25", optional = true }
notify = { workspace = true }
ureq = { version = "2", features = ["json"], optional = true }
# Plan 299: Streamable HTTP transport for AutoUI MCP server
axum = { version = "0.8", features = ["json"], optional = true }
# Plan 214: Python FFI (optional, requires Python dev headers)
pyo3 = { version = "0.29", optional = true, features = ["auto-initialize"] }
trans = "0.4.0"
# Plan 173: r2a transpiler (Rust → Auto)
syn = { version = "2", features = ["full", "parsing", "printing"] }
fastrand = "2.4.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "incremental_transpile_bench"
harness = false

# ============================================================================
# Examples
# ============================================================================

[[example]]
name = "run_vm_test"
path = "examples/run_vm_test.rs"
required-features = ["build-examples"]

[[example]]
name = "a2r_step02"
path = "examples/a2r_step02.rs"
required-features = ["build-examples"]

[[example]]
name = "a2r_step03"
path = "examples/a2r_step03.rs"
required-features = ["build-examples"]

[[example]]
name = "a2r_step04"
path = "examples/a2r_step04.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_todo"
path = "examples/ui_todo.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_accordion"
path = "examples/ui_accordion.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_container"
path = "examples/ui_container.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_counter"
path = "examples/ui_counter.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_gallery"
path = "examples/ui_gallery.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_hello_loader"
path = "examples/ui_hello_loader.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_input"
path = "examples/ui_input.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_layout"
path = "examples/ui_layout.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_list"
path = "examples/ui_list.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_navigation_rail"
path = "examples/ui_navigation_rail.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_progress"
path = "examples/ui_progress.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_radio"
path = "examples/ui_radio.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_scroll"
path = "examples/ui_scroll.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_select"
path = "examples/ui_select.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_sidebar"
path = "examples/ui_sidebar.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_slider"
path = "examples/ui_slider.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_table"
path = "examples/ui_table.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_tabs"
path = "examples/ui_tabs.rs"
required-features = ["build-examples"]

[[example]]
name = "ui_todos"
path = "examples/ui_todos.rs"
required-features = ["build-examples"]
