[package]
name = "auto-lsp"
version = "0.3.0"
edition = "2021"
description = "Language Server Protocol implementation for AutoLang"
license = "MIT"

[dependencies]
tower-lsp-server = "0.23"
lsp-types = "0.97"
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
miette = { workspace = true }
auto-lang = { path = "../auto-lang" }
auto-val = { path = "../auto-val" }
env_logger = "0.11"
url = "2.5"

[lib]
name = "auto_lsp"
path = "src/lib.rs"

[[bin]]
name = "auto-lsp"
path = "src/bin.rs"
