[package]
name = "auto-man"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-lang = { path = "../auto-lang" }
regex = "1"
auto-val = { path = "../auto-val" }
auto-gen = { path = "../auto-gen" }
auto-cache = { path = "../auto-cache" }  # Plan 082: AutoCache integration
blake3 = { workspace = true }  # Plan 134: File hashing utilities

# Error handling
thiserror = { workspace = true }

# CLI
clap = { workspace = true }
rust-embed = { workspace = true }

# Utilities
tabled = { workspace = true }
simplelog = { workspace = true }
log = { workspace = true }
normalize-path = { workspace = true }
dialoguer = { workspace = true }
glob = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
colored = { workspace = true }
glob-match = { workspace = true }
encoding_rs = { workspace = true }
is_executable = { workspace = true }
base64 = "0.22"

# Serialization (Phase 1+)
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }  # Plan 082: Timestamp formatting

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "auto_man"
path = "src/lib.rs"

