[package]
name = "auto-playground"
version = "0.1.0"
edition = "2021"
description = "Auto Playground web API server"

[dependencies]
auto-lang = { path = "../auto-lang" }
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
