[package]
name = "auto"
version = "0.1.0"
edition = "2021"
default-run = "auto"

[dependencies]
clap = { workspace = true }
auto-lang = { path = "../auto-lang" }
auto-val = { path = "../auto-val" }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5.0"
indicatif = "0.18.3"
