[package]
name = "auto"
version = "0.1.0"
edition = "2021"
default-run = "auto"

[dependencies]
clap = { workspace = true }
auto-lang = { path = "../auto-lang" }
auto-val = { path = "../auto-val" }
auto-man = { path = "../auto-man" }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5.0"
indicatif = "0.18.3"
log = "0.4"
simplelog = "0.12"
colored = { workspace = true }

[features]
default = ["ui-iced"]
ui-iced = ["auto-lang/ui-iced"]
python = ["auto-lang/python"]
with-file-history = ["auto-lang/with-file-history"]
nanbox = ["auto-lang/nanbox"]
